// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`infinite loop protection > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "loop",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "counter",
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [],
    "instruction": "loop",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&counter",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "counter",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
    ],
    "instruction": "push",
    "lineNumber": 6,
  },
  {
    "arguments": [],
    "instruction": "add",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 8,
  },
  {
    "arguments": [],
    "instruction": "loopEnd",
    "lineNumber": 9,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 11,
  },
]
`;

exports[`infinite loop protection > if the generated AST, WAT and memory map match the snapshot 2`] = `""`;

exports[`infinite loop protection > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__loopErrorSignaler": {
    "byteAddress": 4,
    "default": -1,
    "elementWordSize": 4,
    "id": "__loopErrorSignaler",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "counter": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "counter",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;

exports[`loop > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "loop",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "counter",
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [],
    "instruction": "loop",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "counter",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 10,
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "equal",
    "lineNumber": 6,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
    ],
    "instruction": "branchIfTrue",
    "lineNumber": 7,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&counter",
      },
    ],
    "instruction": "push",
    "lineNumber": 9,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "counter",
      },
    ],
    "instruction": "push",
    "lineNumber": 10,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
    ],
    "instruction": "push",
    "lineNumber": 11,
  },
  {
    "arguments": [],
    "instruction": "add",
    "lineNumber": 12,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 13,
  },
  {
    "arguments": [],
    "instruction": "loopEnd",
    "lineNumber": 14,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 16,
  },
]
`;

exports[`loop > if the generated AST, WAT and memory map match the snapshot 2`] = `""`;

exports[`loop > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__loopErrorSignaler": {
    "byteAddress": 4,
    "default": -1,
    "elementWordSize": 4,
    "id": "__loopErrorSignaler",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "counter": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "counter",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;
